[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/CollectibleBunnyEvolve.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="CollectibleBunnyEvolve" type="Area2D" groups=["COLLECTIBLE_BUNNY_EVOLVE"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_CollectibleBunnyEvolve_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_CollectibleBunnyEvolve_area_exited"]
[connection signal="input_event" from="." to="." method="_on_CollectibleBunnyEvolve_input_event"]
